<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" android:background="@color/BackgroundColor">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" android:textColor="@color/TextColor"/>

    <Button
        android:id="@+id/btnIntent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonString" android:background="@color/ButtonColor"/>

    <Button
        android:id="@+id/btnService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ServiceString" android:background="@color/ButtonColor"/>

    <Button
        android:id="@+id/btnStop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stopstring" android:background="@color/ButtonColor"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/BoundService" android:textColor="@color/TextColor"/>

    <Button
        android:id="@+id/btnRandomNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RandomNumberString" />

</LinearLayout>